refactor: reorganize test scripts and add npm-run-all for streamlined execution
- Added npm-run-all as a dependency to manage multiple npm scripts.
- Created individual scripts for clearing old reports, running tests, merging reports, and generating HTML reports.
- Combined all scripts into a single 'all' script for easier execution.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 cypress/screenshots
-cypress/reports/*.html
-cypress/reports/*.json
-cypress/reports/assets
+cypress/reports/html/
+cypress/reports/json/
+.vscode
