--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
     "cypress": "^15.6.0",
     "mochawesome": "^7.1.4",
     "mochawesome-merge": "^5.0.0",
-    "mochawesome-report-generator": "^6.3.2"
+    "mochawesome-report-generator": "^6.3.2",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "@faker-js/faker": "^9.5.0"
   },
   "scripts": {
-    "test": "rm -rf cypress/reports && npx cypress run --spec 'cypress/e2e/InternalBooking.js,cypress/e2e/RegressionScript.js,cypress/e2e/ResSync.js' --browser chrome && npx mochawesome-merge cypress/reports/json/*.json > cypress/reports/output.json && mkdir -p cypress/reports/html && npx marge cypress/reports/output.json -f CombinedReport -o cypress/reports/html --inline",
-    "InternalBooking": "npx cypress run --spec 'E:/Automation-scripts-cypress/cypress/e2e/InternalBooking.js' --browser chrome",
-    "Regression": "npx cypress run --spec 'cypress/e2e/RegressionScript.js' --browser chrome",
-    "ResSync": "npx cypress run --spec 'E:/Automation-scripts-cypress/cypress/e2e/ResSync.js' --browser chrome",
-    "merge-reports": "npx mochawesome-merge cypress/reports/json/*.json > cypress/reports/output.json",
-    "generate-report": "npx marge cypress/reports/output.json -f CombinedReport -o cypress/reports/html --inline"
+    "clearOldReports": "rm -rf cypress/reports",
+    "test": "npx cypress run --spec 'cypress/e2e/InternalBooking.js,cypress/e2e/RegressionScript.js,cypress/e2e/ResSync.js' --browser chrome",
+    "mergeAndGenerateReport": "npx mochawesome-merge cypress/reports/json/*.json > cypress/reports/output.json",
+    "reportHtmlDirCreation": "mkdir -p cypress/reports/html",
+    "mergeReport": "npx marge cypress/reports/output.json -f CombinedReport -o cypress/reports/html --inline",
+    "all" : "npm-run-all clearOldReports test mergeAndGenerateReport reportHtmlDirCreation mergeReport"
+    
   }
 }
