chore: update package-lock.json and package.json
- Removed unused dependency '@pkgjs/parseargs' from package-lock.json.
- Added 'peer' property to multiple dependencies in package-lock.json for better compatibility.
- Changed the format option in the mergeReport script in package.json from 'CombinedReport' to 'index'.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "npx cypress run --spec 'cypress/e2e/InternalBooking.js,cypress/e2e/RegressionScript.js,cypress/e2e/ResSync.js' --browser chrome",
     "mergeAndGenerateReport": "npx mochawesome-merge cypress/reports/json/*.json > cypress/reports/output.json",
     "reportHtmlDirCreation": "mkdir -p cypress/reports/html",
-    "mergeReport": "npx marge cypress/reports/output.json -f CombinedReport -o cypress/reports/html --inline",
+    "mergeReport": "npx marge cypress/reports/output.json -f index -o cypress/reports/html --inline",
     "all": "npm-run-all --continue-on-error clearOldReports test mergeAndGenerateReport reportHtmlDirCreation mergeReport"
     
   }
