--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.5.0"
+    "@faker-js/faker": "^9.5.0",
+    "express": "^5.1.0"
   },
   "scripts": {
     "clearOldReports": "rm -rf cypress/reports",
@@ -15,7 +16,10 @@
     "mergeAndGenerateReport": "npx mochawesome-merge cypress/reports/json/*.json > cypress/reports/output.json",
     "reportHtmlDirCreation": "mkdir -p cypress/reports/html",
     "mergeReport": "npx marge cypress/reports/output.json -f index -o cypress/reports/html --inline",
-    "all": "npm-run-all --continue-on-error clearOldReports test mergeAndGenerateReport reportHtmlDirCreation mergeReport"
-    
+    "all": "npm-run-all --continue-on-error clearOldReports test mergeAndGenerateReport reportHtmlDirCreation mergeReport",
+    "regression": "npx cypress run --spec 'cypress/e2e/InternalBooking.js'",
+    "dispatch": "cypress run --spec 'cypress/e2e/RegressionScript.js'",
+    "res-sync-flow": "cypress run --spec 'cypress/e2e/ResSync.js'"
+
   }
 }
